# Sirne-Server

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  meulog.lognb  mockjson.md  nb  pdf.py
.cache/clangd/index/: bind.cpp.38BEBDA60B1993BE.idx  interpreter.hpp.3519609AECB18212.idx  json.hpp.5CAF4EDD2EBC4DE8.idx  log.cpp.766F112928DF6439.idx  log.hpp.ABF3861EB222FD62.idx  main.cpp.3866C4654DF75C7C.idx  mariadb.cpp.002ABF71CE203A60.idx  mariadb.hpp.D5CBC8DB0D0BEA94.idx  nebin.hpp.98E80755024910FF.idx  query.cpp.9AA2C725AA360C45.idx  server_base.cpp.24C5F02749B8DD84.idx  server_base.hpp.196D8521BCDA8A06.idx  sync_server.cpp.31DAD386EAC050F7.idx  sync_server.hpp.0882EBBA9C7A6CBD.idx
back/: Makefile
db/: nebin.sql
dotc/: .compile_commands.json  .gitignore  Makefile  compile_commands.json  n  unix-bne
dotc/include/: defines.h  log.h  server.h  serverstate.h
dotc/src/: log.c  main.c  server.c  serverstate.c
include/: interpreter.hpp
include/Apresentation/RequestModels/: LancheRequest.hpp
include/CrossCutting/: Log.hh
include/Domain/Lanche/: Lanche.hpp
include/Infra/: BoostConnection.hh  BoostHttpIo.hh  HttpResponse.hh  IControllers.hh  IHttpIo.hh  IHttpResponse.hh  Server.hpp  Terminal.hh
nebinAPI/: log.hpp  nebin.hpp  sync_server.hpp
nebinAPI/database/: mariadb.hpp
src/: Program.cpp  Umbrella.hpp  interpreter.cpp  interpreter.cppz4D2DW.bck  main.cpp
src/CrossCutting/: Log.cc  Terminal.cc
src/Infra/: BoostConnection.cc  BoostHttpIo.cc  Controllers.cc  HttpResponse.cc  Server.cpp  Terminal.cc
tests/scripts/: cn.sh
(+16 files in other folders)
